# wasm-oracle

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md
.github/workflows/: Basic.yml  e2e.yml
_rust-price-feeder/: Cargo.toml
_rust-price-feeder/src/: main.rs
artifacts/: checksums.txt  checksums_intermediate.txt  oracle.wasm
data-feeders-examples/: README.md
data-feeders-examples/crypto-prices/: config.json  package.json
data-feeders-examples/crypto-prices/src/: app.ts  helpers.ts
data-feeders-examples/stock-prices/: README.md  config.json  package-lock.json  package.json
data-feeders-examples/stock-prices/src/: app.ts  types.ts
data-feeders-examples/stock-prices/src/providers/: GoogleFinance.ts  YahooFinance.ts
e2e/: helpers.sh  test_e2e.sh
src/: contract.rs  error.rs  helpers.rs  msg.rs  state.rs
ts-data-feeder/: README.md  config.json
ts-data-feeder-tokens/: config.json  tsconfig.json
ts-data-feeder-tokens/src/providers/: Coingecko.ts  WyndDex.ts
ts-data-feeder/src/: app.ts  types.ts
ts-data-feeder/src/providers/: Binance.ts  Coinbase.ts  Coingecko.ts  Osmosis.ts  WyndDex.ts
ts-price-feeder/: package-lock.json  package.json
ts-price-feeder/src/: app.ts
